--- a/app.json
+++ b/app.json
@@ -7,8 +7,8 @@
     "telegram",
     "shortener"
   ],
-  "website": "https://github.com/Neutron-Bots",
-  "repository": "https://github.com/kevinnadar22/URL-Shortener-V2",
+  "website": "https://github.com/Dkmovie",
+  "repository": "https://github.com/Dkmovie/URL-Shortener-V2",
   "env": {
     "BOT_TOKEN": {
       "description": "Your bot token from @botfather",
